--- a/index.html
+++ b/index.html
@@ -25,12 +25,9 @@
     <h2> Why Play? </h2>
       <p> This game has several positive reasons to play. First, its FUN! Also, memory exercises have been proven to help improve memory retention. Lastly, Its a great game for the whole family. I took great pride in creating this. As one of my first projects I took aspects of all of my prior career experience into account while doing it. Read a litle about me on <a href="http://linkdin.com">linkdin</a> to learn more about me.</p>
 
-      <div> 
-        <img src= "images/back.png" alt= "Queen of Diamonds">
-        <img src= "images/back.png" alt= "Queen of Hearts">
-        <img src= "images/back.png" alt= "King of Diamonds">
-        <img src= "images/back.png" alt= "King of Hearts">
-      </div>
+      <div id="game-board" class="board clearfix"></div>
+
+       <input type="reset" value="Reset">
     </main>
     <footer class="clearfix">
       <p class="copyright">Copyright 2017</p>
